--- a/public/design.html
+++ b/public/design.html
@@ -5,8 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" media="screen" href="stylesheets/main.css">
 <link rel="stylesheet" media="screen" href="javascripts/ext/sidr/stylesheets/jquery.sidr.light.css">
+<link rel="stylesheet" media="screen" href="javascripts/ext/animatedtablesorter/style.css">
 <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
@@ -21,42 +23,359 @@
 	<div class="container">
 		<div class="navbar-header">
 			<button id="sidemenu" type="button" class="navbar-toggle">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
+				<i class="fa fa-bars"></i>
 			</button>
 			<a class="navbar-brand sidemenu-collapse" href="#">@title</a>
-		</div>
-		<div class="collapse navbar-collapse navbar-top">
-			<ul class="nav navbar-nav">
-				<li id="nav-home"><a href="#">Home</a></li>
-				<li id="nav-men"><a href="#">Make room</a></li>
-				<li id="nav-women"><a href="#">Your rooms</a></li>
-			</ul>
 		</div>
 	</div>
 </div>
 <div id="sidr">
 	<ul>
-		<li>Home</li>
-		<li>Make room</li>
-		<li>Room menu
+		<li><a href="#home"><i class="fa fa-home"></i> ホーム</a></li>
+		<li><a href="#make-room"ルームの作成</a></li>
+		<li>ルームメニュー
 			<ul>
-				<li><a href="#">Add quiz</a></li>
-				<li><a href="#">Ranking</a></li>
-				<li><a href="#">Tweet</a></li>
-				<li><a href="#">Add event</a></li>
-				<li><a href="#">Publish quiz</a></li>
+				<li><a href="#question">問題</a></li>
+				<li><a href="#ranking">ランキング</a></li>
+				<li><a href="#tweet">ツィート</a></li>
+				<li><a href="#make-question">問題の投稿</a></li>
+			</ul>
+		</li>
+		<li>ルーム管理
+			<ul>
+				<li><a href="#edit-room">ルームの編集</a></li>
+				<li><a href="#edit-event">イベントの編集</a></li>
+				<li><a href="#make-question">問題の作成</a></li>
+				<li><a href="#publish-question">出題</a></li>
 			</ul>
 		</li>
 	</ul>
 </div>
-<div id="content" class="container" style="height:1000px;">
-Content
+<div id="content" class="container">
+	<!-- home -->
+	<div class="app-home" id="home">
+		<h1>@title</h1>
+		<div>
+			<button class="btn btn-twitter">
+				<i class="fa fa-twitter fa-2x"></i>
+				Twitterでログイン
+			</button>
+			<button class="btn btn-facebook">
+				<i class="fa fa-facebook fa-2x"></i>
+				Facebookでログイン
+			</button>
+		</div>
+		<div>
+			<h2>イベント</h2>
+			<ul class="nav nav-tabs">
+				<li class="active"><a href="#event-future" data-toggle="tab">近日開催</a></li>
+				<li><a href="#event-past" data-toggle="tab">終了</a></li>
+			</ul>
+			<div class="tab-content">
+				<div id="event-future" class="tab-pane active">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>日時</th>
+								<th>タイトル</th>
+								<th>定員</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td>20名</td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td>20名</td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td>20名</td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td>20名</td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td>20名</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div id="event-past" class="tab-pane">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>日時</th>
+								<th>タイトル</th>
+								<th>トップ</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
+							</tr>
+							<tr>
+								<td>2014/03/01 19:00</td>
+								<td>Heroku meetup #12</td>
+								<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- make-room -->
+	<div id="make-room">
+		make-room
+	</div>
+	<!-- question -->
+	<div id="question">
+		question
+	</div>
+	<!-- ranking -->
+	<div id="ranking">
+		<h1>ランキング</h1>
+		<ul class="nav nav-tabs" id="tab-ranking">
+			<li class="active"><a href="#ranking-current" data-toggle="tab">Now!</a></li>
+			<li><a href="#ranking-event" data-toggle="tab">イベント</a></li>
+			<li><a href="#ranking-total" data-toggle="tab">通算</a></li>
+		</ul>
+		<div class="tab-content">
+			<div id="ranking-current" class="tab-pane active">
+				<table class="table table-hover" id="tbl-ranking-current">
+					<thead>
+						<tr>
+							<th>順位</th>
+							<th>名前</th>
+							<th>正答数</th>
+							<th>タイム</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test1</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test2</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test3</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test4</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test5</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>6</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test6</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>7</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test7</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>8</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test8</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>9</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test9</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>10</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"> test10</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div id="ranking-event" class="tab-pane">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>日時</th>
+							<th>優勝者</th>
+							<th>正答数</th>
+							<th>タイム</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>2014/02/14</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>2014/02/14</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>2014/02/14</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>2014/02/14</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+						<tr>
+							<td>2014/02/14</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+							<td>22.14</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div id="ranking-total" class="tab-pane">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>順位</th>
+							<th>名前</th>
+							<th>ポイント</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>6</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>7</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>8</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>9</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+						<tr>
+							<td>10</td>
+							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg">i556</td>
+							<td>13</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	<!-- tweet -->
+	<div id="tweet">
+		tweet
+	</div>
+	<!-- make-question -->
+	<div id="make-question">
+		make-question
+	</div>
+	<!-- edit-room -->
+	<div id="edit-room">
+		edit-event
+	</div>
+	<!-- edit-event -->
+	<div id="edit-event">
+		edit-event
+	</div>
+	<!-- publish-question -->
+	<div id="publish-question">
+		publish-question
+	</div>
 </div>
 
 <script src="javascripts/ext/sidr/jquery.sidr.min.js"></script>
 <script src="javascripts/ext/touchSwipe/jquery.touchSwipe.js"></script>
+<script src="javascripts/ext/animatedtablesorter/tsort.min.js"></script>
 <script src="javascripts/design.js"></script>
 </body>
 </html>
