--- a/public/design.html
+++ b/public/design.html
@@ -209,6 +209,9 @@
 		</div>
 	</div>
 	<!-- question -->
+	<div id="animation">
+		<span id="question-number">第１問</span>
+	</div>
 	<div id="question">
 		<h1>問題</h1>
 		<div class="progress">
